# felinet

./: .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
configs/: data_sources.yaml  rag_config.yaml
scripts/: all_links_extraction.py  index_corpus.py  init_mlflow.py  inspect_chunks.py  log_baseline_experiment.py  sub_section_extraction.py  test_retrieval.py
src/felinet/: __init__.py  schemas.py
src/felinet/api/: app.py
src/felinet/data/: cfa_scraper.py  cornell_scraper.py  loader.py  pipeline.py  wikipedia_scraper.py
src/felinet/embeddings/: chunker.py  embedder.py  vector_store.py
src/felinet/rag/: pipeline.py
tests/unit/: test_schemas.py
