[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "felinet"
version = "0.1.0"
description = "A feline health and breed knowledge assistant powered by deep RAG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Emily", email = "exzm0916@gmail.com.com"},
]

dependencies = [
    # Core
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",

    # Data ingestion
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "trafilatura>=1.8,<2.0",

    # Embeddings & vector store
    "sentence-transformers>=3.0,<4.0",
    "qdrant-client>=1.9,<2.0",
    "rank-bm25>=0.2.2,<0.3",

    # LLM & RAG
    "groq>=0.9,<1.0",
    "langchain-text-splitters>=0.2,<1.0",

    # API
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "gradio>=4.36,<5.0",

    # MLOps
    "mlflow>=2.14,<3.0",
    "dvc>=3.51,<4.0",
    "prefect>=2.19,<3.0",
    "deepeval>=1.1,<2.0",
    "langfuse>=2.36,<3.0",

    # Data quality
    "great-expectations>=0.18,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
    "pre-commit>=3.7,<4.0",
    "ipykernel>=6.29,<7.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
